--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+h1 {
+  font-size: xx-large;
+  font-weight: bold;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+th {
+  text-align: center;
+  padding: 5px 20px;
+  border-right: 1px solid rgba(128, 128, 128, 0.452);
+  width: 20vw;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+td {
+  padding: 5px 20px;
+  border-right: 1px solid rgba(128, 128, 128, 0.452);
+  min-width: 350px;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+/* WebKit scrollbar styling */
+::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+  height: 8px; /* Height of the scrollbar (for horizontal scrollbar) */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Track color */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #8888886e; /* Thumb color */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #5555557a; /* Thumb color on hover */
+}
+
+@media (max-width: 499px) {
+  td {
+    min-width: 250px;
   }
 }
